small fix - overflow scroll for the info section

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ html, body {
 
 .App-header {
   max-height: 100vh;
+  overflow: scroll;
   /*display: flex;*/
 }
 
